--- a/style.css
+++ b/style.css
@@ -1,7 +1,9 @@
+@import url('https://fonts.googleapis.com/css?family=Play|Source+Code+Pro');
+
 :root {
   --maintext-color: #0f0e0f;
-  --nav-color: #ccc;
-  --about-color: #ff307f;
+  --nav-color: rgb(239, 246, 247,0.2);
+  --about-color: rgb(219, 0, 51,0.90);
 }
 
 * {
@@ -17,23 +19,22 @@
   }
 
 .navbar__list {
-  display: flex;
+  display: grid;
+  grid-template-columns: repeat(3,1fr);
   width: 33vw;
   height: 60px;
   margin: auto 33vw;
-  border-radius:
   text-align: center;
   justify-content: space-around;
   align-items: center;
-  border-bottom-right-radius: 25px;
-  border-bottom-left-radius: 25px;
+  border-bottom-right-radius: 5px;
+  border-bottom-left-radius: 5px;
   background-color: var(--nav-color);
   opacity: 0.75;
 }
 
 .navbar__list__item {
   list-style-type: none;
-  opacity: 1;
   color: black;
 }
 
@@ -45,11 +46,19 @@
 
 .about {
   display: grid;
-  grid-template: repeat(3,1fr) /repeat(6,1fr);
+  grid-template: repeat(10,1fr) /repeat(5,1fr);
   width: 100vw;
   height: 100vh;
   background-color: var(--about-color);
   color: var(--maintext-color);
+}
+
+.about__logo {
+    grid-column: 3/4;
+    grid-row: 2/6;
+    align-self: center;
+    justify-self: center;
+
 }
 
 .about__logo__image {
@@ -58,3 +67,27 @@
   border-radius: 50%;
   border: black solid 5px;
 }
+
+.about__logo__tag {
+  text-align: center;
+}
+
+.about__description {
+  display: grid;
+  grid-template-rows: repeat(4,1fr);
+    grid-row: 7/-1;
+    grid-column: 1/4;
+    position: relative;
+    left: 4em;
+      }
+
+ .about__description__title {
+    font-size: 3em;
+font-family: 'Play', sans-serif;
+ }
+
+ .about__description__text {
+  grid-row: 2/-1;
+  font-family: 'Source Code Pro', monospace;
+  font-size: 1.1em;
+ }
