--- a/src/css/main.css
+++ b/src/css/main.css
@@ -61,12 +61,16 @@
       align-self: center;
       background-color: #fff;
       box-shadow: 0 2px 2px #a77e8c; }
+      .about__container__logo:hover {
+        background-color: #48016b; }
       .about__container__logo__stack {
         color: #db0033;
         text-align: center;
         align-self: center;
         font-size: 3em;
         text-shadow: 1px 1px 2px #db0033; }
+        .about__container__logo__stack:hover {
+          color: #fff; }
     .about__container__description {
       display: grid;
       grid-template-rows: repeat(5, 1fr);
@@ -97,12 +101,24 @@
   display: grid;
   grid-template: 1fr 1fr / 1fr 1fr;
   height: 200vh;
-  margin-top: 2em;
+  margin-top: 4px;
   background-color: #f9f4f8;
-  color: #db0033;
-  text-align: center;
-  font-family: 'Play', sans-serif;
-  font-size: 1.2em; }
+  justify-items: center;
+  align-items: center; }
+  .portfolio__project {
+    display: grid;
+    width: 35vw;
+    height: 80vh;
+    border: solid 1px #ccc;
+    box-shadow: 0px 2px 3px #bbb;
+    text-align: center;
+    font-family: 'Play', sans-serif;
+    font-size: 1.2em;
+    color: #db0033; }
+    .portfolio__project:nth-child(odd) {
+      margin-left: 4vw; }
+    .portfolio__project:nth-child(even) {
+      margin-right: 4vw; }
 
 .contact {
   height: 25vh;
