--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -78,13 +78,20 @@ $customPurple: #48016b;
       align-self: center;
       background-color: #fff;
       box-shadow: 0 2px 2px #a77e8c;
+      &:hover {
+        background-color: $customPurple;
+      }
       &__stack {
         color: $customFuschia;
         text-align: center;
         align-self: center;
         font-size: 3em;
         text-shadow: 1px 1px 2px $customFuschia;
+        &:hover {
+          color: #fff;
+        }
       }
+
     }
 
     &__description {
@@ -124,12 +131,29 @@ $customPurple: #48016b;
   display: grid;
   grid-template: 1fr 1fr / 1fr 1fr;
   height: 200vh;
-  margin-top: 2em;
+  margin-top: 4px;
   background-color: #f9f4f8;
-  color: $customFuschia;
-  text-align: center;
-  font-family: 'Play', sans-serif;
-  font-size: 1.2em;
+  justify-items:center;
+  align-items: center;
+
+  &__project {
+    display: grid;
+    width: 35vw;
+    height: 80vh;
+    border: solid 1px #ccc;
+    box-shadow: 0px 2px 3px #bbb;
+    text-align: center;
+    font-family: 'Play', sans-serif;
+    font-size: 1.2em;
+    color: $customFuschia;
+    &:nth-child(odd) {
+      margin-left: 4vw;
+    }
+    &:nth-child(even) {
+      margin-right: 4vw;
+    }
+  }
+
 }
 
 .contact {
