updated portfolio borders

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -66,11 +66,12 @@
       grid-column: 3/5;
       grid-row: 7/-1;
       align-self: end;
+      padding: 0.25em;
       font-size: 2.5em;
       text-decoration: none;
       color: #eee7;
       animation-name: spin;
-      animation-duration: 1s;
+      animation-duration: 1000ms;
       animation-iteration-count: infinite; }
       .about__container__arrow a {
         text-decoration: none;
@@ -96,36 +97,47 @@
   align-items: center; }
   .portfolio__project {
     display: grid;
-    grid-template-rows: 0.25fr 1fr 0.5fr 0.25fr;
-    width: 48vw;
-    height: 98vh;
-    background-color: #13030d;
-    border: solid 1px #ccc;
+    width: 49vw;
+    height: 99vh;
+    background-color: white;
+    border: solid 5px #db0033;
     box-shadow: 0 2px 3px #000;
     text-align: center;
     font-family: 'Play', sans-serif;
     font-size: 1.2em;
     color: #db0033; }
-    .portfolio__project:nth-child(odd) {
-      margin-left: 5px; }
-    .portfolio__project:nth-child(even) {
-      margin-right: 5px; }
+    .portfolio__project__container {
+      display: grid;
+      grid-template-rows: 0.25fr 1fr 0.5fr 0.25fr;
+      align-self: center;
+      justify-self: center;
+      width: 98%;
+      height: 98%;
+      border: solid 5px #33ccff; }
     .portfolio__project__title {
       align-self: center; }
     .portfolio__project__image {
       border-radius: 3px;
       margin: auto;
-      width: 90%;
-      height: 300px; }
+      width: 80%;
+      height: 250px; }
     .portfolio__project__description {
       align-self: center; }
     .portfolio__project__stack {
       display: grid;
-      grid-template-columns: repeat(3, 1fr); }
+      grid-template-columns: repeat(auto-fill, minmax(200px, 1fr)); }
       .portfolio__project__stack i {
         font-size: 1.5em; }
 
 .contact {
+  display: grid;
+  margin-top: 1em;
   height: 25vh;
   background-color: #db0033;
   box-shadow: 0 -2px 2px #48016b; }
+  .contact__list__picture {
+    width: 150px;
+    height: 150px;
+    border-radius: 100%;
+    align-self: center;
+    justify-self: center; }
