--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -7,7 +7,6 @@ $stackBgColor: #13030d;
   padding: 0;
   margin: 0;
   box-sizing: border-box;
-
 }
 
 .container {
@@ -25,22 +24,40 @@ $stackBgColor: #13030d;
     display: grid;
     justify-items: center;
     align-items: center;
-    grid-template: repeat(7,1fr) / repeat(6,1fr);
+    grid-template: 1fr 0.5fr repeat(5,1fr) / repeat(6,1fr);
     width: 94%;
     height: 96vh;
     margin: 2vh auto;
 
     &__title {
       grid-column: 3/5;
-      grid-row: 1/5;
-      align-self: end;
+      grid-row: 2/4;
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      grid-template-rows: 1fr 1fr;
       position: relative;
-      bottom: -0.01em;
-      font-size: 16em;
+      top: 0.15em;
+      font-size: 7.3em;
       letter-spacing: 0.02em;
       font-family: 'Maven Pro', sans-serif;
       color: #ddd4;
       text-shadow: -3px 1px 50px #ddd3;
+
+      :nth-child(1) {
+        display: grid;
+        grid-column: 1/2;
+        // align-self: end;
+      }
+
+      :nth-child(2) {
+        display: grid;
+        grid-column: 2/3;
+        grid-row: 2/3;
+        position: relative;
+        top: -0.30em;
+        left: -0.13em;
+        // align-self: baseline;
+      }
     }
 
     &__description {
@@ -85,7 +102,7 @@ $stackBgColor: #13030d;
       grid-column: 3/5;
       grid-row: 7/-1;
       align-self: end;
-      padding: 0.25em;
+      padding: 0.1em 0.25em;
       font-size: 2.5em;
       text-decoration: none;
       color: #eee7;
@@ -93,11 +110,12 @@ $stackBgColor: #13030d;
       animation-duration: 1000ms;
       animation-iteration-count: infinite;
 
-      a{
+      a {
         text-decoration: none;
-        color:#eee7;
-        &:visited{
-          color:#eee7;
+        color: #eee7;
+
+        &:visited {
+          color: #eee7;
         }
       }
 
@@ -105,7 +123,6 @@ $stackBgColor: #13030d;
         cursor: pointer;
       }
     }
-
     @keyframes spin {
       from {
         transform: rotateY(0deg);
@@ -122,7 +139,7 @@ $stackBgColor: #13030d;
   display: grid;
   grid-template: 1fr 1fr / 1fr 1fr;
   height: 200vh;
-  margin-top: 4px;
+  margin-top: 1em;
   background-color: #f9f4f8;
   justify-items: center;
   align-items: center;
@@ -139,9 +156,9 @@ $stackBgColor: #13030d;
     font-size: 1.2em;
     color: $customFuschia;
 
-    &__container{
+    &__container {
       display: grid;
-      grid-template-rows: 0.25fr 1fr 0.5fr 0.25fr;
+      grid-template-rows: 0.25fr 0.85fr 0.45fr 0.25fr;
       align-self: center;
       justify-self: center;
       width: 98%;
@@ -151,26 +168,31 @@ $stackBgColor: #13030d;
 
     &__title {
       align-self: center;
+      font-size: 1.3em;
     }
 
     &__image {
       border-radius: 3px;
       margin: auto;
-      width: 80%;
+      width: 77%;
       height: 250px;
-          }
+    }
 
     &__description {
-      align-self: center;
+      font-size: 0.95em;
+      margin: 0 auto;
+      width: 80%;
     }
 
     &__stack {
       display: grid;
-      // grid-template-columns: repeat(3,1fr);
-      grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+      grid-template-columns: repeat(auto-fill, minmax(180px, 1fr));
 
-      & i {
+      &__skill {
+        display: block;
+        width: 100%;
         font-size: 1.5em;
+        text-shadow: 0 1px 2px #000;
       }
     }
   }
@@ -182,11 +204,12 @@ $stackBgColor: #13030d;
   height: 25vh;
   background-color: $customFuschia;
   box-shadow: 0 -2px 2px $customPurple;
-  &__list__picture{
-     width: 150px;
-     height: 150px;
-     border-radius: 100%;
-    align-self:center;
+
+  &__list__picture {
+    width: 150px;
+    height: 150px;
+    border-radius: 100%;
+    align-self: center;
     justify-self: center;
   }
 }
