--- a/src/css/main.css
+++ b/src/css/main.css
@@ -6,7 +6,8 @@
   scroll-behavior: smooth; }
 
 .container {
-  background-color: #f9f4f8; }
+  background-color: #f9f4f8;
+  overflow-x: hidden; }
 
 .about {
   display: grid;
@@ -30,35 +31,46 @@
       grid-template-rows: 1fr 1fr;
       position: relative;
       top: 0.15em;
-      font-size: 7.3em;
+      left: 0.13em;
+      font-size: 5.8em;
       letter-spacing: 0.02em;
-      font-family: 'Maven Pro', sans-serif;
+      font-family: "Maven Pro", sans-serif;
       color: #ddd4;
-      text-shadow: -3px 1px 50px #ddd3; }
-      .about__container__title :nth-child(1) {
-        display: grid;
+      text-shadow: -3px 1px 50px #ddd3;
+      transition: color 10 ease-in-out; }
+      .about__container__title h2:nth-child(1) {
+        display: flex;
         grid-column: 1/2; }
-      .about__container__title :nth-child(2) {
-        display: grid;
+      .about__container__title h2:nth-child(2) {
+        display: flex;
         grid-column: 2/3;
         grid-row: 2/3;
         position: relative;
-        top: -0.30em;
+        top: -0.3em;
         left: -0.13em; }
+      .about__container__title .letters {
+        color: #ddd4;
+        transition: color 100ms cubic-bezier(0.42, 0, 0.63, 0.86), text-shadow 300ms cubic-bezier(0.42, 0, 0.63, 0.86); }
+      .about__container__title .active-text {
+        color: #e6e4e4;
+        display: block;
+        text-shadow: 0px 0px 10px #fff; }
     .about__container__description {
       grid-row: 5/6;
       grid-column: 2/6;
       align-self: end; }
       .about__container__description__text {
-        font-family: 'Cabin', sans-serif;
         padding: 1em;
         font-size: 1.4em;
         font-weight: bold;
-        background-color: #bbb3;
-        color: #48016b;
+        background-color: #7b080833;
+        text-align: center;
+        color: #21016b;
+        font-family: "Cabin", sans-serif;
         box-shadow: -2px 4px 5px #210031;
+        text-shadow: 0px 1px 1px #b19494ab;
         opacity: 0.95;
-        border-radius: 5px; }
+        border-radius: 10px; }
     .about__container__skills {
       grid-column: 3/5;
       grid-row: 6/7;
@@ -104,7 +116,7 @@
   display: grid;
   grid-template: 1fr 1fr / 1fr 1fr;
   height: 200vh;
-  margin-top: 0.5em;
+  margin-top: 0.4em;
   background-color: #f9f4f8;
   justify-items: center;
   align-items: center; }
@@ -116,17 +128,17 @@
     border: solid 5px #db0033;
     box-shadow: 0 2px 3px #000;
     text-align: center;
-    font-family: 'Play', sans-serif;
+    font-family: "Play", sans-serif;
     font-size: 1.2em;
     color: #db0033; }
     .portfolio__project:nth-child(odd) {
       position: relative;
       left: -50vw;
-      transition: left 450ms ease-out; }
+      transition: left 1050ms cubic-bezier(0.58, 0.01, 0.25, 0.82); }
     .portfolio__project:nth-child(even) {
       position: relative;
       right: -50vw;
-      transition: right 450ms ease-out; }
+      transition: right 1050ms cubic-bezier(0.58, 0.01, 0.25, 0.82); }
     .portfolio__project.active:nth-child(odd) {
       position: relative;
       left: 0; }
@@ -167,10 +179,199 @@
   margin-top: 0.5em;
   height: 25vh;
   background-color: #db0033;
-  box-shadow: 0 -2px 2px #48016b; }
+  box-shadow: 0 -2px 3px #004; }
   .contact__list__picture {
     width: 150px;
     height: 150px;
     border-radius: 100%;
     align-self: center;
     justify-self: center; }
+
+@media (max-width: 1066px) {
+  .about__container__title {
+    font-size: 5em; }
+  .about__container__description {
+    grid-column: 1/-1; }
+    .about__container__description__text {
+      font-size: 1.45em; }
+  .portfolio__project {
+    height: 99vh; } }
+
+@media (max-width: 1066px) and (max-height: 450px) {
+  .about__container__description__text {
+    font-size: 1em; } }
+
+@media (max-width: 1066px) and (max-height: 380px) {
+  .about__container__title {
+    font-size: 3.25em; }
+  .about__container__skills {
+    margin-top: 0.5em; } }
+
+@media (max-width: 780px) {
+  .about__container__title {
+    font-size: 3.8em; }
+  .about__container__description {
+    grid-column: 1/-1; }
+    .about__container__description__text {
+      font-size: 1.25em; }
+  .portfolio {
+    height: 200%; }
+    .portfolio__project {
+      height: 98%;
+      margin: 0.25em auto; }
+      .portfolio__project__description {
+        font-size: 0.8em; }
+      .portfolio__project__stack {
+        grid-template-columns: repeat(auto-fill, minmax(120px, 1fr)); } }
+
+@media (max-width: 780px) and (max-height: 450px) {
+  .about__container__title {
+    font-size: 2.75em; }
+  .about__container__description__text {
+    font-size: 1em; }
+  .about__container__skills {
+    font-size: 0.65em; }
+  .portfolio {
+    height: 100%; }
+    .portfolio__project {
+      height: 100%; }
+  .contact {
+    height: 25%; } }
+
+@media (max-width: 660px) {
+  .about__container__title {
+    font-size: 2.8em; }
+  .about__container__description {
+    position: relative;
+    grid-row: 4/7;
+    grid-column: 1/-1;
+    bottom: 1em;
+    align-self: center;
+    text-align: center; }
+    .about__container__description__text {
+      font-size: 1.1em; }
+  .about__container__skills {
+    grid-column: 2/6; } }
+
+@media (max-width: 660px) and (max-height: 450px) {
+  .about__container__title {
+    font-size: 2.5em; }
+  .about__container__description__text {
+    font-size: 0.9em; } }
+
+@media (max-width: 660px) and (max-height: 368px) {
+  .about__container__title {
+    font-size: 2em; }
+  .about__container__description__text {
+    font-size: 0.8em; } }
+
+@media (max-width: 460px) {
+  .about__container__title {
+    grid-row: 1/3;
+    font-size: 2.5em; }
+  .about__container__description {
+    grid-row: 3/7;
+    grid-column: 1/-1;
+    align-self: center;
+    text-align: center; }
+    .about__container__description__text {
+      font-size: 1.1em; }
+  .about__container__skills {
+    grid-row: 6/7;
+    grid-column: 2/6;
+    margin-top: 1em; }
+  .about__container__arrow {
+    padding: 0.2em; }
+  .portfolio {
+    display: block;
+    height: 100%; }
+    .portfolio__project {
+      width: 99vw;
+      height: 96vh;
+      margin: 0.45em auto; }
+      .portfolio__project__container {
+        grid-template-rows: 0.25fr 0.7fr 0.45fr 0.25fr; }
+      .portfolio__project:nth-child(odd) {
+        position: relative;
+        left: -100vw;
+        transition: left 200ms ease-out; }
+      .portfolio__project:nth-child(even) {
+        position: relative;
+        right: -100vw;
+        transition: right 200ms ease-out; }
+      .portfolio__project.active:nth-child(odd) {
+        position: relative;
+        left: 0; }
+      .portfolio__project.active:nth-child(even) {
+        position: relative;
+        right: 0; }
+      .portfolio__project__stack {
+        grid-template-columns: repeat(auto-fill, minmax(130px, 1fr)); }
+      .portfolio__project__description {
+        font-size: 0.95em; }
+      .portfolio__project__image {
+        height: 230px; } }
+
+@media (max-width: 460px) and (min-height: 650px) {
+  .about__container__description__text {
+    font-size: 1.25em; }
+  .portfolio__project__description {
+    font-size: 1.025em; } }
+
+@media (max-width: 460px) and (max-height: 650px) {
+  .about__container__title {
+    font-size: 2.5em; }
+  .about__container__description__text {
+    font-size: 1.2em; } }
+
+@media (max-width: 380px) {
+  .about__container__title {
+    font-size: 2.2em; }
+  .about__container__description__text {
+    font-size: 1.25em; }
+  .portfolio__project__image {
+    height: 200px; }
+  .portfolio__project__description {
+    font-size: 0.85em; }
+  .portfolio__project__stack {
+    font-size: 0.85em; } }
+
+@media (max-width: 380px) and (min-height: 750px) {
+  .about__container__description__text {
+    font-size: 1.4em; }
+  .portfolio__project__description {
+    font-size: 0.95em; } }
+
+@media (max-width: 380px) and (max-height: 650px) {
+  .about__container__description__text {
+    font-size: 1.2em; }
+  .portfolio__project__description {
+    font-size: 0.825em; } }
+
+@media (max-width: 330px) {
+  .about__container__title {
+    font-size: 2.1em; }
+  .about__container__description__text {
+    font-size: 1.05em; }
+  .about__container__skills {
+    font-size: 0.8em; }
+  .portfolio__project__description {
+    font-size: 0.77em; }
+  .contact__list__picture {
+    width: 125px;
+    height: 125px; } }
+
+@media (max-width: 330px) and (max-height: 540px) {
+  .about__container__description__text {
+    font-size: 0.9em; } }
+
+@supports not (display: grid) {
+  .about {
+    display: float;
+    height: 100%; }
+    .about__container {
+      display: flex;
+      height: 100%; }
+      .about__container__title {
+        display: flex;
+        flex: 1; } }
